--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
         {% block stylesheets %}
             <link rel="icon" href="images/favicons.png" sizes="16x16" type="image/png">
             <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+            <link rel="stylesheet" type="text/css"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
         {% endblock %}
 
     </head>
