--- a/templates/comunes/_backheader.html.twig
+++ b/templates/comunes/_backheader.html.twig
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Back-Office</a>
+  <a class="navbar-brand" href="{{path('back_home')}}">Back-Office</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item">
-        <a class="nav-link" href="{{path('cursos')}}">Cursos</a>
+        <a class="nav-link" href="{{path('back_cursos')}}">Cursos</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="{{path('suscripcion')}}">Suscripción</a>
